--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ethers": "^6.4.0",
     "express": "^4.18.2",
     "mongodb": "^5.5.0",
     "web3": "^1.10.0"
