--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@adraffy/ens-normalize": "^1.9.0",
     "ethers": "^6.4.0",
     "express": "^4.18.2",
     "mongodb": "^5.5.0",
