--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async-retry": "^1.3.3",
     "express": "^4.18.2",
     "mongodb": "^5.5.0",
     "web3": "^1.10.0"
