--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "async-retry": "^1.3.3",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "^5.5.0",
     "web3": "^1.10.0"
